# faas-invoker

./: README.md  setup.cfg
faas_invoker/: __init__.py  aws_lambda.py  exp.py  faas_invoker.py  hello.py  io_helper.py  knative.py  metrics_collector.py  platform_invoker.py  replayer.py
faas_invoker/logs/: example.csv  example_20.csv
