[metadata]
name = faas_invoker
version = 1.0
author = Zhaojie
long_description = file: README.md
license = MIT
url = https://github.com/wenzhaojie/faas-invoker
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    requests

[options.entry_points]
console_scripts =
    faas_invoker = faas_invoker.hello:main
